# iptc-usage

./: README.md
iptc/: CMakeLists.txt  iptc_examples.h  main.c  qn_get_jpeg_iptc_info.c  qn_iptc_help_func.c  qn_set_jpeg_iptc_info.c  qn_set_jpeg_iptc_info2.c
